--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-draggable": "^2.2.6",
     "react-router": "^2.0.1"
   }
 }
