--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "p5": "^0.5.11",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-draggable": "^2.2.6",
+    "react-p5-wrapper": "0.0.4",
     "react-router": "^2.0.1"
   }
 }
