--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "react": "^0.14.3",
+    "react-color": "^2.13.0",
     "react-dom": "^0.14.3",
     "react-draggable": "^2.2.6",
     "react-p5-wrapper": "0.0.4",
-    "react-router": "^2.0.1"
+    "react-router": "^2.0.1",
   }
 }
