--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "react-dom": "^0.14.3",
     "react-draggable": "^2.2.6",
     "react-p5-wrapper": "0.0.4",
-    "react-router": "^2.0.1",
+    "react-router": "^2.0.1"
   }
 }
